[metadata]
name = backend
version = 0.1
url =
project_urls =
    Source Code =
license = BSD-3-Clause
author = Novareto GmbH
author_email = trollfot@gmail.com
maintainer = Novareto GmbH
maintainer_email = ck@novareto.de
description = REHA done right.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
zip_safe = False
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.8

[options.packages.find]
where=src

[options.entry_points]


[aliases]
test = pytest
